@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Mar 2010; <slep@gentoo.org> -milter-greylist-4.3.4.ebuild,
+  milter-greylist-4.3.4-r1.ebuild:
+  more QA fix
+
+  12 Mar 2010; <slep@gentoo.org> -milter-greylist-4.3.4.ebuild:
+  delete old ebuild
+
   04 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +milter-greylist-4.3.4-r1.ebuild:
   fix depend
